# bazele-programarii

./: CMakeLists.txt  Unitatea1.py  problma in clasa (02.10.2025.py  task1.py  task2.py  task3.py
lab 1/: Varianta 5 .cpp  Varianta 6 .cpp  varianta 9.cpp
lab 2/: 13.cpp  15.cpp  17.cpp
lab3/: ex 2 case.cpp  ex 2.cpp
